# py_template

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/py_template/: __main__.py
